--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,25 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\EventListener\ResponseHeaderListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
+
+    # Rejestracja kalkulatorów z użyciem tagów
+    App\Service\Pricing\VatPriceCalculator:
+        arguments:
+            $vatRate: 0.23 # stawka VAT 23%
+        tags:
+            - { name: 'app.price_calculator' }
+
+    App\Service\Pricing\DiscountPriceCalculator:
+        arguments:
+            $discountRate: 0.1 # zniżka 10%
+        tags:
+            - { name: 'app.price_calculator' }
+
+    # Rejestracja kolektora kalkulatorów
+    App\Service\Pricing\PriceCalculatorCollector:
+        arguments:
+            $calculators: !tagged_iterator app.price_calculator
